--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,36 @@
 
 h1 {
 	font-family: Raleway, "Droid Serif";
-	color: #0D2C40;
+	color: white;
 	font-weight: 400;
 	font-size: 45px;
 	letter-spacing: 1px;
 	margin: 0;
 }
 
+.button {
+	padding: 5px 10px;
+	border: 1px solid black;
+    color: white;
+	display: inline-block;
+	font-family: Raleway, "Droid Serif";
+	line-height: 26px;
+	letter-spacing: 1px;
+	font-size: 18px;
+	font-weight: 600;
+	text-align: center;
+	margin: 0 20px 0 20px; 
+	background: black;
+}
+
+.button:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
 .gamelinks {
 	font-family: Raleway, "Droid Serif";
-	color: #F15B31;
+	color: white;
 	font-weight: 600;
 	font-size: 18px;
 	letter-spacing: 1px;
